@@ -1,6 +1,7 @@
 protonvpn-nm-lib (3.6.0-1) unstable; urgency=medium
 
   * Feature: Add notification polling
+  * Improve: Human verification at login
 
  -- Proton Technologies AG <opensource@proton.me>  Tue, 12 Oct 2021 13:00:00 +0100
  
